--- a/70_project1/css/style.css
+++ b/70_project1/css/style.css
@@ -1,1 +1,12 @@
 @charset "utf-8";
+
+a {font-size:15px; color:#777;}
+a:hover {color: #000;}
+
+h1 {font-size: 24px; color: #fff; letter-spacing: 10px; }
+h2 {font-size: 36px; color: #fff; letter-spacing: 10px;}
+h3 {font-size: 24px; color:#777; }
+h4 {font-size: 18px; color: #777;}
+
+body {font-size: 15px; color: #777; line-height:1.8;}
+span {letter-spacing: 10px;}
