--- a/70_project1/css/style.css
+++ b/70_project1/css/style.css
@@ -6,6 +6,17 @@ font-family: 'Noto Sans KR', sans-serif; */
 
 
 /* 초기화 */
+* {
+    box-sizing: border-box;
+}
+body {
+    margin: 0;
+}
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 li {
     list-style-type: none;
 }
@@ -35,20 +46,24 @@ h1 {
     font-size: 2.4rem;
     color: #fff;
     letter-spacing: 1rem;
+    text-align: center;
 }
 
 h2 {
     font-size: 3.6rem;
     color: #fff;
     letter-spacing: 1rem
+    text-align: center;
 }
 
 h3 {
     font-size: 2.4rem;
+    text-align: center;
 }
 
 h4 {
     font-size: 1.8rem;
+    text-align: center;
 }
 
 a:hover {
@@ -76,9 +91,11 @@ span {
 address {
     font-size: 1.8rem;
 }
+em {text-align: center;}
+
+body * {}
 
 /* 헤더 */
-.logo {text-align: center;}
 /* 섹션1 */
 /* 섹션2 */
 /* 섹션3 */
