--- a/70_project1/css/style.css
+++ b/70_project1/css/style.css
@@ -4,7 +4,6 @@
 /* font-family: 'Lato', sans-serif;
 font-family: 'Noto Sans KR', sans-serif; */
 
-
 /* 초기화 */
 * {
     box-sizing: border-box;
@@ -25,11 +24,21 @@ a {
     color: #777;
     text-decoration: none;
 }
+img {
+    width: 100%;
+    vertical-align: top;
+}
 
 button {
     font-size: 1.5rem;
     color: #000
 }
+.clearfix::after {
+    content: '';
+    clear: both;
+    display: block;
+}
+
 
 /* 타이포 */
 /* rem은 html기준으로 변경됨, 계산하기쉽게 html 기본폰트는 10px로설정 */
@@ -52,7 +61,7 @@ h1 {
 h2 {
     font-size: 3.6rem;
     color: #fff;
-    letter-spacing: 1rem
+    letter-spacing: 1rem;
     text-align: center;
 }
 
@@ -66,10 +75,6 @@ h4 {
     text-align: center;
 }
 
-a:hover {
-    color: #000;
-}
-
 button {
     font-size: 1.5rem;
     color: #fff
@@ -79,25 +84,102 @@ button:hover {
     color: #000
 }
 
-span {
-    letter-spacing: 1rem;
-}
+/* span {
+    letter-spacing: 10px;
+} */
 
-span {
+.pf3 span {
     font-size: 2.4rem;
-    color: #fff;
 }
 
 address {
     font-size: 1.8rem;
 }
-em {text-align: center;}
 
-body * {}
+body * {outline: 1px solid lime;}
 
 /* 헤더 */
+header {
+    height:45px; 
+}
+nav li {
+    float: left;
+}
+nav li a {
+    padding: 20px 20px;
+    line-height: 45px;
+}
+nav li a:hover {
+    background: #ccc;
+    color: #000;
+}
+
+.tac {
+    text-align: center;
+}
+
+/* 섹션2,3,4의 공통 */
+.container {
+    width: 940px;
+    margin: 0 auto;
+}
 /* 섹션1 */
+
 /* 섹션2 */
+
+/* 섹션2 - 프로필2: 내사진과 프로필 텍스트 */
+.pf2 div {
+    float: left;
+    width: 440px;
+}
+.pf2 > p {
+    float: right;
+    width: 440px;
+}
+
+/* 섹션2 - 스킬 */
+.skill div {
+    height: 35px;
+    background: #f1f1f1;
+}
+.skill span {
+    height: 100%;
+    display: block;
+    background: #616161;
+    color: #fff;
+    text-align: center;
+}
+.skill li:nth-of-type(1) span {
+    width: 90%;
+}
+.skill li:nth-of-type(2) span {
+    width: 85%;
+}
+.skill li:nth-of-type(3) span {
+    width: 75%;
+}
+/* 섹션3 - 프로필3 */
+.pf3 li {
+    float: left;
+    width: 25%;
+    height: 135px;
+    text-align: center;
+    background: #616161;
+    color: #fff;
+    padding: 36px;
+}
+.pf3 span {
+    display: block;
+}
 /* 섹션3 */
+.myWork li {
+    float: left;
+    width: 220px;
+    height: 160px;
+}
+
+
+
+
 /* 섹션4 */
 /* 푸터 */
