--- a/70_project1/css/style.css
+++ b/70_project1/css/style.css
@@ -31,7 +31,10 @@ img {
 
 button {
     font-size: 1.5rem;
-    color: #000
+    color: #000;
+    /* 커서 손가락모양으로 변경 */
+    cursor: pointer;
+    border: none;
 }
 .clearfix::after {
     content: '';
@@ -123,9 +126,38 @@ nav li a:hover {
     width: 940px;
     margin: 0 auto;
 }
-/* 섹션1 */
 
-/* 섹션2 */
+/* 패럴렉스 이미지 */
+#sec1 {
+    position: relative;
+    height: 1045px;
+    background: url(../images/parallax1.jpg) no-repeat 50% 50%/cover fixed;
+}
+
+#sec3 .para {
+    height: 405px;
+    background: url(../images/parallax2.jpg) no-repeat 50% 50%/cover fixed;
+}
+
+#sec4 .para {
+    height: 405px;
+    background: url(../images/parallax3.jpg) no-repeat 50% 50%/cover fixed;
+}
+
+/* 섹션1 */
+.logo {
+    position: absolute;
+    /* width: 416px;
+    line-height: 54px; */
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    padding: 12px 24px;
+    line-height: 1;
+    /* margin-left: -208px;
+    margin-top: -27px; */
+    background: #404040;
+}
 
 /* 섹션2 - 프로필2: 내사진과 프로필 텍스트 */
 .pf2 div {
@@ -158,6 +190,12 @@ nav li a:hover {
 .skill li:nth-of-type(3) span {
     width: 75%;
 }
+
+/* 섹션3 - 타이틀 portfolio */
+#sec3 .para h2 {
+    line-height: 405px;
+}
+
 /* 섹션3 - 프로필3 */
 .pf3 li {
     float: left;
@@ -172,14 +210,75 @@ nav li a:hover {
     display: block;
 }
 /* 섹션3 */
+.myWork {text-align: center;}
 .myWork li {
-    float: left;
     width: 220px;
     height: 160px;
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 20px;
+}
+.myWork li:nth-of-type(4n) {margin-right: 0;}
+.myWork a {
+    display: inline-block;
+    width: 138px;
+    line-height: 45px;
+    background: #f1f1f1;
+    color: #000;
+}
+.myWork a:hover {background: #ccc;}
+
+
+
+/* 섹션4 - 타이틀 contact */
+#sec4 .para h2 {
+    line-height: 405px;
 }
 
-
-
-
 /* 섹션4 */
+.map {
+    float: left;
+    width: 285px;
+}
+.info {
+    float: right;
+    width: 630px;
+}
+form {text-align: right;}
+
+form input {
+    width: 292px;
+    height: 45px;
+    padding: 16px;
+}
+form input:nth-of-type(1) {margin-right: 13px;}
+
+form input:nth-of-type(3) {
+    width: 600px;
+    margin-top: 13px ;
+}
+input::placeholder {
+    color: #ccc;
+}
+form button {
+    width: 160px;
+    height: 45px;
+    background: #000;
+}
+form button:hover {background: #ccc;}
+
 /* 푸터 */
+footer {
+    height: 288px;
+    background: #616161;
+    text-align: center;
+    color: #fff;
+}
+footer:hover {background: #000;}
+footer a {
+    display: inline-block;
+    width:130px;
+    line-height: 45px;
+    background: #fff;
+    color: #616161;
+}
