--- a/70_project1/css/style.css
+++ b/70_project1/css/style.css
@@ -1,5 +1,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700&family=Noto+Sans+KR:wght@100;400;700&display=swap');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css');
 
 /* font-family: 'Lato', sans-serif;
 font-family: 'Noto Sans KR', sans-serif; */
@@ -98,6 +99,25 @@ button:hover {
 address {
     font-size: 1.8rem;
 }
+
+/* 아이콘 */
+nav li:first-of-type ~ li a::before {
+    content: '';
+    display: inline-block;
+    width: 11px;
+    height: 11px;
+    padding-right: 5px;
+    background-repeat: no-repeat;
+}
+nav li:nth-of-type(2) a::before {background-image: url(../images/icon_nav2.svg);}
+nav li:nth-of-type(3) a::before {background-image: url(../images/icon_nav3.svg);}
+nav li:nth-of-type(4) a::before {background-image: url(../images/icon_nav4.svg);}
+form button img {
+    width: 16px;
+    vertical-align: middle;
+    margin-right: 5px;
+}
+form button img span {vertical-align: middle;}
 
 body * {outline: 1px solid lime;}
 
@@ -275,10 +295,19 @@ footer {
     color: #fff;
 }
 footer:hover {background: #000;}
-footer a {
+
+footer .toTheTop {
     display: inline-block;
     width:130px;
     line-height: 45px;
     background: #fff;
     color: #616161;
+}
+.toTheTop:hover {
+    background: #ccc;
+    color: #000;
+}
+
+.toTheTop i {
+    margin-right: 5px;
 }
