--- a/70_project2/css/style.css
+++ b/70_project2/css/style.css
@@ -2,26 +2,51 @@
 
 
 /* 초기화 */
+*{box-sizing: border-box;}
+
 a {
     color: #000;
     text-decoration: none;
 }
 
+img {
+    width: 100%;
+    vertical-align: top;
+}
+
 li {list-style-type: none;}
 
+button {
+    font-size: 1.5rem;
+    color: #000;
+    border: none;
+    width: 360px;
+    height: 38px;
 
-
+}
 
 
 /* 타이포 */
-body {font-size: 10px;
-color:#000}
+html {font-size: 10px;}
+body {
+    font:1.5rem/1.5 'segoe ui',sans-serif;
+    color:#000}
 
-h1 {font: 3.6rem/0.4 
-    color:#f1f1f1;}
-h2 {font-size: 2.4rem;}
-h3 {font-size: 1.5rem;}
-p {font-size: 1.5rem}
+h1 {font: 1.5rem/0.4; }
+h2 {font-size: 3.6rem/0.4; 
+color: #fff;}
+h2 {font-size: 3.6rem/0.4; 
+    color: #f1f1f1;}
+h2 {font-size: 2.4rem
+    color   #000;}
+h3 {font-size: 1.5rem
+    color:#fff;}
+h3 {font-size: 2.4rem;}
+p {font-size: 1.5rem
+color: #;
+line-height: 22px
+}
 
-a {font-size: 1.5rme;}
+a {font-size: 1.5rem}
+
 
