--- a/70_project2/css/style.css
+++ b/70_project2/css/style.css
@@ -29,10 +29,54 @@ body {
     font: 1.5rem/1.5 verdana, sans-serif;
     color: #000;
 }
-/* 헤더 */
-/* 섹션1 */
-/* 섹션2 */
-/* 섹션3 */
-/* 섹션4 */
-/* 푸터 */
+
+h1 {
+    /* section1 - main title */
+    font-size: 36px;
+    color: #fff;
+    letter-spacing: 4px;
+}
+h2 {
+    /* section2,3,4 - title */
+    font-size: 24px;
+}
+h3 {
+    /* section3 - sub title */
+    font-size: 18px;
+}
+.logo {
+    font-size: 15px;
+    color: #000;
+}
+a {color: #000;}
+nav a {
+    letter-spacing: 4px;
+}
+.copy {color: #fff;}
+
+
+/* --------------------header-------------------- */
+header {
+    /* position을 fixed나 absolute로 지정하면 width가 콘텐츠크기로 지정된다. */
+    position: fixed;
+    width: 100%;
+    background: #fff;
+    overflow: hidden;
+    /* box-shadow: x위치 y위치 흐림효과 퍼짐 그림자색,..; */
+    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+}
+.logo {float: left;}
+nav {float: right;}
+nav li {float: left;}
+
+
+/* --------------------section1-------------------- */
+
+/* --------------------section2-------------------- */
+
+/* --------------------section3-------------------- */
+
+/* --------------------section4-------------------- */
+
+/* --------------------footer-------------------- */
 
