--- a/70_project2/css/style.css
+++ b/70_project2/css/style.css
@@ -50,9 +50,8 @@ h3 {
     color: #000;
 }
 a {color: #000;}
-nav a {
-    letter-spacing: 4px;
-}
+nav a {letter-spacing: 4px;}
+.mainTit {font-weight: normal;}
 .copy {color: #fff;}
 
 
@@ -60,11 +59,12 @@ nav a {
 header {
     /* position을 fixed나 absolute로 지정하면 width가 콘텐츠크기로 지정된다. */
     position: fixed;
+    z-index: 999;
     background: #fff;
     overflow: hidden;
     width: 100%;
-    height: 55px;
-    line-height: 55px;
+    height: 56px;
+    line-height: 56px;
     padding: 0 24px;
     /* box-shadow: x위치 y위치 흐림효과 퍼짐 그림자색,..; */
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
@@ -77,23 +77,54 @@ header a:hover {background: #ccc;}
 nav {float: right;}
 nav li {float: left;}
 
-
-/* --------------------section1-------------------- */
-#section1 div {
+/* --------------------section1-4공통-------------------- */
+.container {
     /* 12col, 109+11*16 = 1484 */
     width: 1484px;
     /* 블록레벨요소의 가로 가운데 배치 */
     margin: 0 auto;
     position: relative;
 }
+
+/* --------------------section1-------------------- */
 .mainTit {
+    z-index: 1;
     position: absolute;
     left: 50%;
-    top:50%;
-    transform: translateX(-50%, -50%);
+    top:calc(50% + 28px);
+    transform: translate(-50%, -50%);
+}
+
+.mainTit b {
+    /* background: rgba(0,0,0,0.75) →배경색만 불투명도 0.75 */
+    /* ↓배경색뿐아니라 글자색도 불투명도 0.75적용됨 */
+    background: #000; opacity: 0.75 ; 
+    padding: 12px 16px;
 }
 
 /* --------------------section2-------------------- */
+#section2 ul:after {
+    content:'';
+    display: block;
+    clear: both;
+    background: yellow;
+}
+#section2 li {
+    position: relative;
+    width: 359px;
+    float: left;
+}
+
+
+
+#section2 span {
+    position: absolute;
+    left:0; top:0;
+    background: #000;
+    color: #fff;
+    padding: 8px 16px;
+}
+
 
 /* --------------------section3-------------------- */
 
