--- a/90_test/UI제작_이진주/css/style.css
+++ b/90_test/UI제작_이진주/css/style.css
@@ -1,61 +1,41 @@
 @charset "utf-8";
-/* 이자리에 폰트정해서 넣기 */
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 @import url('reset.css');
 
 /* Typo */
-@font-face {
-    font-family: segoeui;
-    src: url(../font/segoeui.ttf)
-}
-
-@font-face {
-    font-family: verdana;
-    src: url(../font/verdana.ttf)
-}
-
-@font-face {
-    font-family: segoeuii;
-    src: url(../font/segoeuii.ttf)
-}
-
-@font-face {
-    font-family: verdanai;
-    src: url(../font/verdanai.ttf)
-}
-
 html {font-size: 10px;}
 
 body {
-    font: 1.5rem/1.8 verdana, sans-serif;
+    font: 1.5rem/1.8 'Montserrat', sans-serif;
     color: #000;
 }
-h1, h2, h3 {
-    font-family: 'Segoe UI', sans-serif;
+
+input {font: 1.5rem/1.8 'Montserrat', sans-serif;
 }
 
-h1 {
-    /* section1 - main title */
-    font-size: 36px;
-    color: #fff;
-    letter-spacing: 4px;
-}
+button {font: 1.5rem/1.8 'Montserrat', sans-serif;}
+
 h2 {
     /* section2,3,4 - title */
     font-size: 24px;
+    letter-spacing: 4px;
 }
 h3 {
     /* section3 - sub title */
     font-size: 24px;
 }
-.logo {
-    font-size: 15px;
-    font-weight: 400;
-    color: #000;
-}
+
 a {color: #000;}
-nav a {letter-spacing: 4px;}
+nav a {
+    font-size: 1.6rem;
+    letter-spacing: 4px;
+    color: #fff;
+    }
+
+span {font-size: 1.6rem;}
 .mainTit {font-weight: normal;}
 .copy {color: #fff;}
+
 
 
 /* --------------------header-------------------- */
@@ -71,9 +51,14 @@ header {
     padding: 0 24px;
     /* box-shadow: x위치 y위치 흐림효과 퍼짐 그림자색,..; */
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    background-color: #212529;
 }
 
-.logo {float: left;}
+.logo {float: left;
+    margin: 10px 0;
+    width: 69px; height: 32px;
+}
+
 header a {padding: 8px 16px;}
 header a:hover {background: #ccc;}
 
@@ -90,10 +75,10 @@ nav li {float: left;}
 }
 .container h2 {
     margin-top: 80px; 
-    margin-bottom: 24px;
+    margin-bottom: 27px;
     line-height: 1;
-    border-bottom: 1px solid #ccc;
-    padding-bottom: 24px
+    border-bottom: 1px solid #f1f1f1;
+    padding-bottom: 27px
 }
 
 /* html에서 clearfix하던지, css 공통으로 clea:both처리해야함 */
@@ -102,8 +87,6 @@ nav li {float: left;}
     display: block;
     clear: both;
 }
-
-
 
 
 /* --------------------section1-------------------- */
@@ -115,12 +98,7 @@ nav li {float: left;}
     transform: translate(-50%, -50%);
 }
 
-.mainTit b {
-    /* background: rgba(0,0,0,0.75) →배경색만 불투명도 0.75 */
-    /* ↓배경색뿐아니라 글자색도 불투명도 0.75적용됨 */
-    background: #000; opacity: 0.75 ; 
-    padding: 12px 16px;
-}
+.mainTit img {padding: 12px 16px;}
 
 /* --------------------section2-------------------- */
 #section2 h2 {margin-bottom: 42px;}
@@ -128,7 +106,8 @@ nav li {float: left;}
     position: relative;
     width: 359px;
     float: left;
-    margin-bottom: 16px;
+    margin-bottom: 16px;   
+    border:1px solid #ccc;
 }
 
 /* 359*4 + 16*3 =1484 */
@@ -142,15 +121,17 @@ nav li {float: left;}
 
 #section2 span {
     position: absolute;
-    left:0; top:0;
+    right:0; top:0;
     background: #000;
     color: #fff;
     padding: 8px 16px;
+
 }
 
 /* --------------------section3-------------------- */
 #section3 > p {margin-bottom: 42px;}
 
+#section3  h3 {font-weight: normal;}
 #section3 li * {
     margin: 16px 0;
 }
@@ -159,10 +140,10 @@ nav li {float: left;}
     float: left;
 }
 
+#section3 li img {border:1px solid #ccc;}
 #section3 li:not(li:nth-of-type(1)) {margin-left: 16px;}
 
 #section3 li p:nth-of-type(1) {
-    /* opacity: 0.6; */
     color: #999;
 }
 
@@ -179,6 +160,30 @@ nav li {float: left;}
 #section3 a:hover {background:#ccc;}
 
 /* --------------------section4-------------------- */
+#section4 form input {
+    width: 1484px;
+    display: block;
+    padding: 8px;
+    margin-bottom: 8px;
+    border: 1px solid #ccc;
+}
+#section4 form input:nth-of-type(1) {margin-top: 27px;}
 
+#section4 button {
+    width: 359px; height: 39px;
+    background: #212529;
+    color: #fff;
+    margin: 27px 0;
+}
+#section4 button:hover {background: #ccc;}
+
+#section4 img {margin-bottom: 8px;}
 /* --------------------footer-------------------- */
-
+footer {
+    height: 85px;
+    background: #000;
+    line-height: 85px;
+    text-align: center;
+    color: #fff;
+    margin: 0 auto;
+}
