--- a/90_test/UI제작_이진주/css/style.css
+++ b/90_test/UI제작_이진주/css/style.css
@@ -3,39 +3,51 @@
 @import url('reset.css');
 
 /* Typo */
-html {font-size: 10px;}
+html {
+    font-size: 10px;
+}
 
 body {
     font: 1.5rem/1.8 'Montserrat', sans-serif;
     color: #000;
 }
 
-input {font: 1.5rem/1.8 'Montserrat', sans-serif;
+input {
+    font: 1.5rem/1.8 'Montserrat', sans-serif;
 }
 
-button {font: 1.5rem/1.8 'Montserrat', sans-serif;}
+button {
+    font: 1.5rem/1.8 'Montserrat', sans-serif;
+}
 
 h2 {
     /* section2,3,4 - title */
     font-size: 24px;
     letter-spacing: 4px;
 }
+
 h3 {
     /* section3 - sub title */
     font-size: 24px;
 }
 
-a {color: #000;}
+a {
+    color: #000;
+}
+
 nav a {
     font-size: 1.6rem;
     letter-spacing: 4px;
     color: #fff;
-    }
+}
 
-span {font-size: 1.6rem;}
-.mainTit {font-weight: normal;}
-.copy {color: #fff;}
+span {
+    font-size: 1.6rem;
+}
 
+.copy {
+    color: #fff;
+}
 
 
 /* --------------------header-------------------- */
@@ -49,21 +61,36 @@ header {
     height: 56px;
     line-height: 56px;
     padding: 0 24px;
-    /* box-shadow: x위치 y위치 흐림효과 퍼짐 그림자색,..; */
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
     background-color: #212529;
 }
 
-.logo {float: left;
-    margin: 10px 0;
-    width: 69px; height: 32px;
+.logo {
+    float: left;
+    padding: 8px 16px;
 }
 
-header a {padding: 8px 16px;}
-header a:hover {background: #ccc;}
+.logo img {
+    width: 69px;
+    height: 32px;
+    text-align: center;
+}
 
-nav {float: right;}
-nav li {float: left;}
+header a {
+    padding: 8px 16px;
+}
+
+header a:hover {
+    background: #ccc;
+}
+
+nav {
+    float: right;
+}
+
+nav li {
+    float: left;
+}
 
 /* --------------------section1-4공통-------------------- */
 .container {
@@ -73,8 +100,9 @@ nav li {float: left;}
     margin: 0 auto;
     position: relative;
 }
+
 .container h2 {
-    margin-top: 80px; 
+    margin-top: 80px;
     margin-bottom: 27px;
     line-height: 1;
     border-bottom: 1px solid #f1f1f1;
@@ -82,8 +110,9 @@ nav li {float: left;}
 }
 
 /* html에서 clearfix하던지, css 공통으로 clea:both처리해야함 */
-#section2 ul::after, #section3 ul::after{
-    content:'';
+#section2 ul::after,
+#section3 ul::after {
+    content: '';
     display: block;
     clear: both;
 }
@@ -94,54 +123,76 @@ nav li {float: left;}
     z-index: 1;
     position: absolute;
     left: 50%;
-    top:calc(50% + 28px);
+    top: calc(50% + 28px);
     transform: translate(-50%, -50%);
 }
 
-.mainTit img {padding: 12px 16px;}
+.mainBG {
+    background-image: url(../images/main.png);
+    background-position: 50% 50%;
+    overflow: hidden;
+    width: 1484px;
+    height: 790px;
+}
+
+#section1 h2 {
+    margin: 0;
+    border: none;
+    padding: 0;
+}
 
 /* --------------------section2-------------------- */
-#section2 h2 {margin-bottom: 42px;}
+#section2 h2 {
+    margin-bottom: 42px;
+}
+
 #section2 li {
     position: relative;
     width: 359px;
     float: left;
-    margin-bottom: 16px;   
-    border:1px solid #ccc;
+    margin-bottom: 16px;
+    border: 1px solid #ccc;
 }
 
-/* 359*4 + 16*3 =1484 */
-/* #section2 li:nth-of-type(1) ~ li {margin-left:16px}
-#section2 li:nth-of-type(4) ~ li {margin: 0;}
-#section2 li:nth-of-type(5) ~ li {margin-left:16px} */
-
-/* 가상클래스:
-선택자1:not(선택자2) ~ 선택자2를 제외한 */
-#section2 li:not(li:nth-of-type(1),li:nth-of-type(5)) {margin-left: 16px;}
+#section2 li:not(li:nth-of-type(1), li:nth-of-type(5)) {
+    margin-left: 16px;
+}
 
 #section2 span {
     position: absolute;
-    right:0; top:0;
-    background: #000;
+    right: 0;
+    top: 0;
+    background: #212529;
     color: #fff;
     padding: 8px 16px;
 
 }
 
 /* --------------------section3-------------------- */
-#section3 > p {margin-bottom: 42px;}
+#section3>p {
+    margin-bottom: 42px;
+}
 
-#section3  h3 {font-weight: normal;}
+#section3 h3 {
+    font-weight: normal;
+}
+
 #section3 li * {
     margin: 16px 0;
 }
-#section3 li{
+
+#section3 li {
     width: 359px;
     float: left;
 }
 
-#section3 li img {border:1px solid #ccc;}
-#section3 li:not(li:nth-of-type(1)) {margin-left: 16px;}
+#section3 li img {
+    border: 1px solid #ccc;
+}
+
+#section3 li:not(li:nth-of-type(1)) {
+    margin-left: 16px;
+}
 
 #section3 li p:nth-of-type(1) {
     color: #999;
@@ -157,7 +208,9 @@ nav li {float: left;}
 }
 
 
-#section3 a:hover {background:#ccc;}
+#section3 a:hover {
+    background: #ccc;
+}
 
 /* --------------------section4-------------------- */
 #section4 form input {
@@ -167,21 +220,31 @@ nav li {float: left;}
     margin-bottom: 8px;
     border: 1px solid #ccc;
 }
-#section4 form input:nth-of-type(1) {margin-top: 27px;}
+
+#section4 form input:nth-of-type(1) {
+    margin-top: 27px;
+}
 
 #section4 button {
-    width: 359px; height: 39px;
+    width: 359px;
+    height: 39px;
     background: #212529;
     color: #fff;
     margin: 27px 0;
 }
-#section4 button:hover {background: #ccc;}
 
-#section4 img {margin-bottom: 8px;}
+#section4 button:hover {
+    background: #ccc;
+}
+
+#section4 img {
+    margin-bottom: 8px;
+}
+
 /* --------------------footer-------------------- */
 footer {
     height: 85px;
-    background: #000;
+    background: #212529;
     line-height: 85px;
     text-align: center;
     color: #fff;
