--- a/70_portfolio/project1_s/css/style.css
+++ b/70_portfolio/project1_s/css/style.css
@@ -179,15 +179,12 @@ em {
 /* 섹션1 */
 .logo {
     position: absolute;
-    /* width: 416px;
-    line-height: 54px; */
+    /* width: 416px; */
     left: 50%;
     top: 50%;
     transform: translate(-50%, -50%);
     padding: 12px 24px;
     line-height: 1;
-    /* margin-left: -208px;
-    margin-top: -27px; */
     background: #404040;
 }
 
